# PrimePartitionAlgorithm

./: .gitignore  LICENSE  README.md
c/: Makefile  README.md  prime_partition.c
haskell/: PrimePartition.hs  README.md
jai/: prime_partition.jai
julia/: README.md  prime_partition.jl
kotlin/: PrimePartition.kt  README.md
publication/: PrimeSynthesis.kt  prime_synthesis.py
python/: README.md  prime_partition.py
rust/: Cargo.toml  README.md  prime_partition.rs
scheme/: README.md  prime-partition.scm
zig/: README.md  build.zig  prime_partition.zig
